--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon dist/index.js"
+    "dev": "nodemon dist/index.js",
+    "lint": "eslint . --ext .ts"
   },
   "author": "muhammadderic",
   "license": "ISC",
