--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon dist/index.js",
+    "dev": "nodemon src/index.ts",
     "lint": "eslint . --ext .ts"
   },
   "author": "muhammadderic",
