--- a/server/package.json
+++ b/server/package.json
@@ -1,25 +1,35 @@
 {
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.12.5",
+    "@types/express": "^4.17.21",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "envalid": "^8.0.0",
     "express": "^4.19.2",
-    "mongoose": "^8.2.4"
+    "mongoose": "^8.2.4",
+    "typescript": "^5.4.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
     "eslint": "^8.57.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.3"
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2"
   },
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server.ts",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "test": "jest --coverage --timeout=10000"
   },
   "author": "muhammadderic",
   "license": "ISC",
