--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "typescript": "^5.4.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/morgan": "^1.9.9",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
